# gemma-template

./: .flake8  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  documentation.yml
benchmark/: index.html
custom_templates/custom_template/: index.html
custom_templates/default_template/: index.html
docs/: benchmark.md  generate_methods.md  index.md  load_dataset.md  models.md  quickstart.md
docs/custom_templates/: custom_template.md  default_template.md
docs/eval_data/: gemma_2b_it_vmlu_benchmark.csv
eval_data/: gemma_2b_vmlu_answers.csv
examples/: kaggle-gemma-2b-it-fine-tuning-with-gemma-template.ipynb  kaggle-gemma-template-gemma-2b-it-unsloth.ipynb
gemma_template/: __init__.py  __version__.py  constants.py  exceptions.py  models.py  types.py  utils.py
generate_methods/: index.html
load_dataset/: index.html
models/: index.html
quickstart/: index.html
search/: search_index.json
tests/: conftest.py  test_instruction_template.py  test_load_dataset.py  test_structure_template.py  test_template.py
