[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
python_requires = >=3.9
install_requires =
    pydantic >= 2.10.4
    langdetect>= 1.0.9
    datasets >= 3.2.0
    nest-asyncio >= 1.6.0
    tqdm >= 4.67.1
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Environment :: Web Environment
    License :: OSI Approved :: Apache License 2.0
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Utilities

project_urls =
    Source = https://github.com/thewebscraping/gemma-template
    Homepage = https://github.com/thewebscraping/gemma-template

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    examples*
    tools*
    docs*

[flake8]
max-line-length = 120
ignore = F821, E203, W503, E501, E231
per-file-ignores =
    __init__.py: F405, F403, E402, F401

[tool.black]
line-length = 120
include = '\.pyi?$'
unstable = true


[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true
skip_glob = ["tests/data", "profiling"]
known_first_party = ["black", "blib2to3", "blackd", "_black_version"]
add_imports = "from __future__ import annotations"
